--- a/src/index.css
+++ b/src/index.css
@@ -164,6 +164,10 @@ input[type="radio"] {
   padding: 1em;
 }
 
+.board > svg * text {
+    cursor: default;
+}
+
 .unZoomedBoard > svg {
   max-height: 600px;
 }
