Tweaking chat. Ready for other people to see it.

--- a/src/index.css
+++ b/src/index.css
@@ -353,9 +353,15 @@ th .player {
 }
 
 .movesTable {
-  max-height: 600px;
+  max-height: 300px;
   overflow-y: auto;
 }
+.chatTable {
+    max-height: 200px;
+    overflow-y: auto;
+    font-size: smaller;
+}
+
 
 /* Leaving the stuff for user settings until I'm prepared to expand it */
 .userSettings {
