--- a/src/index.css
+++ b/src/index.css
@@ -356,6 +356,13 @@ th .player {
   max-height: 300px;
   overflow-y: auto;
 }
+
+.movesTable th {
+  top: 0;
+  position: sticky;
+  background: white;
+}
+
 .chatTable {
     max-height: 200px;
     overflow-y: auto;
