--- a/src/index.css
+++ b/src/index.css
@@ -459,12 +459,7 @@ th .player {
   z-index: 1000;
 }
 
-/* For "new chat" indicator */
-.chevron-down {
-  position: absolute;
-  top: 100vh;
-  transform: translateY(-100%);
-  width: 100%;
-  background-color: var(--secondary-color-2-lighter);
-  z-index: 500;
+/* More prominent YourTurn indicator */
+.yourTurn {
+    background-color: var(--secondary-color-1-lighter);
 }
