Adding star feature to dev server for live testing

--- a/src/index.css
+++ b/src/index.css
@@ -484,3 +484,12 @@ th .player {
     font-size: larger;
     font-weight: bolder;
 }
+
+/* stuff for the stars */
+.starContainer {
+    text-align: right;
+}
+
+.glowingStar {
+    color: #ffdf00;
+}
