Created tabular games list with search, sort, and other features

--- a/src/index.css
+++ b/src/index.css
@@ -512,6 +512,10 @@ th .player {
     font-weight: bolder;
 }
 
+.smallerText {
+    font-size: smaller;
+}
+
 #completedGamesTableFooter {
     font-size: smaller
 }
