YourTurn and TheirTurn tables now in new format, and now including time remaining

--- a/src/index.css
+++ b/src/index.css
@@ -495,29 +495,25 @@ th .player {
     color: #ffdf00;
 }
 
-#completedGamesTable {
+.apTable {
     font-size: smaller;
 }
 
-#completedGamesTable tbody tr:nth-child(even) {
-    background-color: #ddd;
+.apTable tbody tr:nth-child(even) {
+    background-color: var(--secondary-color-3-bg);
 }
 
-#completedGamesTable * .sortable {
+.apTable * .sortable {
     cursor: pointer;
     user-select: none;
 }
 
-#completedGamesTable tr.newChat {
+.apTable tr.newChat {
     font-weight: bolder;
 }
 
 .smallerText {
     font-size: smaller;
-}
-
-#completedGamesTableFooter {
-    font-size: smaller
 }
 
 .hasNotes {
