--- a/src/index.css
+++ b/src/index.css
@@ -487,9 +487,19 @@ th .player {
 .yourTurn {
     display: flex;
     align-items: center;
-    border-radius: 0.25em;
     padding: 0.3em;
-    background-color: var(--secondary-color-1-lighter);
+}
+
+.myTurn {
+  border-radius: 0.25em;
+  padding: 0.3em;
+  background-color: var(--secondary-color-1-lighter);
+}
+
+.playerName {
+  margin-left: 0.5em;
+  line-height: 1.15rem; /* Match the line height with the image height */
+  transform: translateY(10%);
 }
 
 /* text notification of being in check */
