Stats: Pushing to dev server

--- a/src/index.css
+++ b/src/index.css
@@ -528,3 +528,11 @@ th .player {
 .highlight {
     color: var(--secondary-color-1);
 }
+
+.bolder {
+    font-weight: bolder;
+}
+
+.topPad {
+    padding-top: 1em;
+}
