--- a/src/index.css
+++ b/src/index.css
@@ -556,3 +556,37 @@ th .player {
 .topPad {
     padding-top: 1em;
 }
+
+.miniChart {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    /* max-width: 700px; */
+    height: 2rem;
+    margin: 0 auto;
+    /* background-image: linear-gradient(to top, rgba(0, 0, 0, 0.1) 2%, rgba(0, 0, 0, 0) 2%);
+    background-size: 100% 50px;
+    background-position: left top; */
+}
+.miniChart li {
+    position: relative;
+    display: table-cell;
+    vertical-align: bottom;
+    height: 2rem;
+}
+.miniChart span {
+    margin: 0 0.1em;
+    display: block;
+    background: var(--secondary-color-3); /*rgba(209, 236, 250, 0.75);*/
+}
+.miniChart span:before {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%;
+    padding: 5px 1em 0;
+    display: block;
+    text-align: center;
+    content: attr(title);
+    word-wrap: break-word;
+}
