LastSeen indicators, country selection, and rudimentary profile pages rolling out for live testing

--- a/src/index.css
+++ b/src/index.css
@@ -602,6 +602,10 @@ th .player {
     width: 16px;
     height: 12px;
   }
+  .orb.size-s {
+    width: 12px;
+    height: 12px;
+  }
   .flag.size-s.drop-shadow {
     box-shadow: 0 0 1px 0.5px rgba(0, 0, 0, 0.1);
   }
@@ -615,6 +619,10 @@ th .player {
     width: 20px;
     height: 15px;
   }
+  .orb.size-m {
+    width: 18px;
+    height: 18px;
+  }
   .flag.size-m.drop-shadow {
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
   }
@@ -626,6 +634,10 @@ th .player {
   }
   .flag.size-l {
     width: 32px;
+    height: 24px;
+  }
+  .orb.size-l {
+    width: 24px;
     height: 24px;
   }
   .flag.size-l.drop-shadow {
