--- a/src/index.css
+++ b/src/index.css
@@ -493,7 +493,7 @@ th .player {
 .movesTable th {
   top: 0;
   position: sticky;
-  background: inherit;
+  background: var(--main-bg-color);
   color: inherit;
 }
 
