Last CSS change of the night

--- a/src/index.css
+++ b/src/index.css
@@ -213,12 +213,13 @@ strong {
 }
 
 .apButtonNeutral {
-    background: linear-gradient(
+    /* background: linear-gradient(
       180deg,
       var(--secondary-color-3-bg) 0%
       var(--main-bg-color) 100%,
-    );
-    color: var(--high-contrast-font-color);
+    ); */
+    background: var(--main-bg-color);
+    color: var(--main-font-color);
   }
 
   .apButtonNeutral:hover {
