Added board image for Tumbleweed

--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,10 @@ a {
   color: inherit;
 }
 
+a:hover {
+    color: var(--secondary-font-color);
+}
+
 .content * a {
   text-decoration: underline;
 }
