Fix Alfred's Wyke button bar in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1065,3 +1065,11 @@ tr.stickyHeader {
   {
     stroke: var(--svg-default-fill);
   }
+
+  /* Alfred's Wyke button bar fill inversion in dark mode */
+  :root[color-mode="dark"] svg#_btnBar symbol.aprender-button-a697952a21593 > rect {
+    fill: #dddddd;
+  }
+  :root[color-mode="dark"] svg#_btnBar symbol.aprender-button-0ca07818d5ffc > rect {
+    fill: #999999;
+  }
